--- a/DwMember/Base.lproj/Main.storyboard
+++ b/DwMember/Base.lproj/Main.storyboard
@@ -1,18 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="MD1-0L-T3E">
-    <device id="retina5_5" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15400" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="MD1-0L-T3E">
+    <device id="retina5_5" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15404"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--Scan View Controller-->
         <scene sceneID="R0n-n3-c8X">
             <objects>
-                <viewController storyboardIdentifier="ScanViewController" id="V5t-V2-bFk" customClass="ScanViewController" customModule="築地日本料理" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="ScanViewController" id="V5t-V2-bFk" customClass="ScanViewController" customModule="沙嗲王" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="emW-C3-yTw"/>
                         <viewControllerLayoutGuide type="bottom" id="hfh-Nm-EJI"/>
@@ -30,7 +28,7 @@
         <!--Guider View Controller-->
         <scene sceneID="oCW-XJ-NxX">
             <objects>
-                <pageViewController storyboardIdentifier="GuideConntroller" autoresizesArchivedViewToFullSize="NO" transitionStyle="scroll" navigationOrientation="horizontal" spineLocation="none" id="Rap-V0-gY0" customClass="GuiderViewController" customModule="築地日本料理" customModuleProvider="target" sceneMemberID="viewController"/>
+                <pageViewController storyboardIdentifier="GuideConntroller" autoresizesArchivedViewToFullSize="NO" transitionStyle="scroll" navigationOrientation="horizontal" spineLocation="none" id="Rap-V0-gY0" customClass="GuiderViewController" customModule="沙嗲王" customModuleProvider="target" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HKy-PV-KQu" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-3127" y="618"/>
@@ -40,7 +38,7 @@
             <objects>
                 <navigationController storyboardIdentifier="webIndexNav" id="MD1-0L-T3E" sceneMemberID="viewController">
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translucent="NO" id="v8d-ms-T7i">
-                        <rect key="frame" x="0.0" y="20" width="414" height="44"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
@@ -54,7 +52,7 @@
         <!--Pay View Controller-->
         <scene sceneID="ATL-tY-RPt">
             <objects>
-                <viewController storyboardIdentifier="PayViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="tIg-DY-gSR" customClass="PayViewController" customModule="築地日本料理" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="PayViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="tIg-DY-gSR" customClass="PayViewController" customModule="沙嗲王" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="z89-qq-dKI"/>
                         <viewControllerLayoutGuide type="bottom" id="hpd-Tp-zb0"/>
@@ -64,7 +62,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lii-mC-x0C">
-                                <rect key="frame" x="20" y="55" width="374" height="351"/>
+                                <rect key="frame" x="20" y="35" width="374" height="351"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="dWe-pt-ZOA">
                                         <rect key="frame" x="18" y="28" width="338" height="295"/>
@@ -77,7 +75,7 @@
                                                 </constraints>
                                             </imageView>
                                             <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dJE-x5-tUo">
-                                                <rect key="frame" x="148.33333333333334" y="187.66666666666669" width="41.666666666666657" height="0.0"/>
+                                                <rect key="frame" x="148.33333333333334" y="187.66666666666666" width="41.666666666666657" height="0.0"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <color key="textColor" red="0.67013078930000003" green="0.2353583574" blue="0.25085872409999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <nil key="highlightedColor"/>
@@ -135,7 +133,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="60" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="glx-nq-rXE">
-                                <rect key="frame" x="196" y="426" width="22" height="21.666666666666686"/>
+                                <rect key="frame" x="196" y="406" width="22" height="21.666666666666686"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
@@ -169,13 +167,13 @@
         <!--Web View Controller-->
         <scene sceneID="g7u-uO-rRp">
             <objects>
-                <viewController storyboardIdentifier="WebViewController" hidesBottomBarWhenPushed="YES" useStoryboardIdentifierAsRestorationIdentifier="YES" id="eel-d0-HJd" customClass="WebViewController" customModule="築地日本料理" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="WebViewController" hidesBottomBarWhenPushed="YES" useStoryboardIdentifierAsRestorationIdentifier="YES" id="eel-d0-HJd" customClass="WebViewController" customModule="沙嗲王" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="KgS-SJ-QiW"/>
                         <viewControllerLayoutGuide type="bottom" id="mPq-0o-MuW"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="JbU-se-fat">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="672"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="692"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
@@ -189,7 +187,7 @@
         <!--Content View Controller-->
         <scene sceneID="HYY-x1-u1H">
             <objects>
-                <viewController storyboardIdentifier="ContentControll" id="i2j-tf-ABw" customClass="ContentViewController" customModule="築地日本料理" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="ContentControll" id="i2j-tf-ABw" customClass="ContentViewController" customModule="沙嗲王" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="W49-iM-PdT"/>
                         <viewControllerLayoutGuide type="bottom" id="qhr-tV-NP2"/>
@@ -199,7 +197,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dmb-1D-SM3">
-                                <rect key="frame" x="207" y="20" width="0.0" height="0.0"/>
+                                <rect key="frame" x="207" y="0.0" width="0.0" height="0.0"/>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
